--- a/Intro to Web Technology/Lab/Lab_1.html
+++ b/Intro to Web Technology/Lab/Lab_1.html
@@ -1,4 +1,134 @@
 <!DOCTYPE html>
+<html>
+<head>
+  <title>My First Web Page</title>
+</head>
+<body style="background-color: white; font-family: Arial, sans-serif;">
+
+  <h1>Welcome to My Web Page</h1>
+  <p>This is a basic HTML page created for Lab 1.</p>
+
+  <h2>Text Formatting</h2>
+  <p><b>Bold Text</b></p>
+  <p><i>Italic Text</i></p>
+  <p><u>Underlined Text</u></p>
+
+  <h2>Hyperlink Example</h2>
+  <p>Visit <a href="https://www.google.com" target="_blank">Google</a></p>
+
+  <h2>Image Example</h2>
+    <img src="https://cdn.pixabay.com/photo/2023/06/29/10/33/lion-8096155_1280.png"
+       alt="Sample Image"
+       style="max-width: 20%; height: auto; border: 1px solid #ccc;" />
+
+  <h2>List Example</h2>
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+  </ul>
+
+</body>
+</html>
+
+
+<!-- this is one -->
+
+<!-- Exp : 1 = design the front page of website using html.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Lab 1: HTML Front Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f1f1f1;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #007acc;
+      color: white;
+      padding: 1px;
+      text-align: center;
+    }
+    nav {
+      background-color: #005f99;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+    }
+    main {
+      padding: 40px;
+    }
+    footer {
+      background-color: #222;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Welcome to My First HTML Page</h1>
+    <p><strong>Designed for Lab 1</strong> - Demonstrating basic HTML concepts</p>
+  </header>
+
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Gallery</a>
+    <a href="#">Contact</a>
+  </nav>
+
+  <main>
+    <h2>About This Page</h2>
+    <p>This is a simple webpage created using <b>HTML</b>. It uses various tags such as <em>&lt;p&gt;</em>, <strong>&lt;strong&gt;</strong>, <u>&lt;u&gt;</u> and others.</p>
+
+    <h3>Key Tags Demonstrated</h3>
+    <ul>
+      <li><b>&lt;p&gt;</b> – Paragraph</li>
+      <li><b>&lt;strong&gt;</b> – Bold/Important</li>
+      <li><b>&lt;em&gt;</b> – Italic/Emphasis</li>
+      <li><b>&lt;u&gt;</b> – Underlined text</li>
+      <li><b>&lt;a&gt;</b> – Link to another page</li>
+      <li><b>&lt;img&gt;</b> – Display image</li>
+    </ul>
+
+    <h3>Image Example</h3>
+    <img src="https://via.placeholder.com/600x300" alt="Sample image" />
+
+    <h3>Hyperlink Example</h3>
+    <p>Visit <a href="https://www.google.com" target="_blank">Google</a> in a new tab.</p>
+  </main>
+
+  <footer>
+    &copy; 2025 Created for Web Technology Lab | Lab 1
+  </footer>
+
+</body>
+</html>
+ -->
+
+
+
+
+
+
+<!-- this is another -->
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -145,3 +275,5 @@
 
 </body>
 </html>
+
+ -->
