--- a/Intro to Web Technology/Lab/Lab_1.html
+++ b/Intro to Web Technology/Lab/Lab_1.html
@@ -19,7 +19,7 @@
   <h2>Image Example</h2>
     <img src="https://cdn.pixabay.com/photo/2023/06/29/10/33/lion-8096155_1280.png"
        alt="Sample Image"
-       style="max-width: 20%; height: auto; border: 1px solid #ccc;" />
+       style="max-width: 20%; height: auto; border: 1px solid #ccc;" >
 
   <h2>List Example</h2>
   <ul>
