--- a/All_Web Tech/Lab Files/Lab-1 index.html
+++ b/All_Web Tech/Lab Files/Lab-1 index.html
@@ -3,10 +3,10 @@
 <head>
     <title>Jay Swaminarayan</title>
 </head>
-<body style="background-image: url('https://d1maxl27td41jk.cloudfront.net/files/Audio/SingerOrator/Pu.-Gyanjivandasji-Swami---Kundaldham-medium.jpg'); 
+    <body style="background-color: rgb(141, 165, 165);"; 
              background-size: cover;
              background-repeat: no-repeat;
-             background-attachment: fixed;">>
+             background-attachment: fixed;">
     <h1 style="color: white;">Jay Swaminarayan</h1>
     <h1>This is the Swaminarayan Bhagwan</h1>
     
